--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -35,8 +35,12 @@ $(function() {
 <tr><td> Location</td><td>{{episode.location}} </td></tr>
 <tr><td>Date</td><td>{{episode.start|date:"b D d"}}</td></tr>
 <tr><td>Start</td><td>{% if same_dates %}{{episode.start|date:"H:i"}}{% else %}{{episode.start}}{% endif %}</td>
-<td>First Raw Start</td><td>{% if same_dates %}{{clrffs.0.0.raw_file.start|date:"H:i"}}{% else %}{{clrffs.0.0.faw_file.start}}{% endif %}</td></tr>
-<tr><td>Duration</td><td>{{episode.duration}}</td></tr>
+<td>First Raw Start</td><td>{% if same_dates %}{{clrffs.0.0.raw_file.start|date:"H:i"}}{% else %}{{clrffs.0.0.raw_file.start}}{% endif %}</td></tr>
+<tr>
+<td>Duration</td><td>{{episode.duration}}</td>
+<td>Offset</td><td>{{offset}}</td>
+
+</tr>
 <tr><td>End</td><td> {% if same_dates %}{{episode.end|date:"H:i"}}{% else %}{{episode.end}}{% endif %} </td>
 <td>Last Raw End</td> {% with clrffs|last as last_clrffs %}{% with last_clrffs.0.raw_file.end as end %} <td>{% if same_dates %} {{end|date:"H:i"}} {% else %} {{end}} {% endif %}</td> {% endwith %} {% endwith %}
 </tr>
