addeps respectes --update

--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -3,6 +3,8 @@
 {% block head %}
 <title>Veyepar - main</title>
 {% endblock %}
+<tr class=row0><td> <a href="TEST1">{{request.path}}</a> </td></tr>
+TEST1{{request.path}}
 {% block content %}
 <table class=tpick>
 <tr class=row1><td> <a href="{% url clients %}">Clients</a> </td></tr>
@@ -10,4 +12,5 @@
 <table class=tpick>
 <tr class=row1><td> <a href="{% url tests %}">Tests</a> </td></tr>
 </table>
+
 {% endblock %}
