links to switch between testing and production

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -28,6 +28,9 @@
 <a href="/databrowse/">databrowse</a>
 <a href="/main/">main</a>
 <a href="/main/clients/">Clients</a>
+<a href="http://veyepar.nextdayvideo.com:8080{{request.path}}">prod</a>
+<a href="http://localhost:8080{{request.path}}">dev</a>
+
 </p>
 {% block content %}
 {% endblock %}
