--- a/dj/main/templates/client.html
+++ b/dj/main/templates/client.html
@@ -13,7 +13,10 @@
 
     <table class=tpick>
         {% for show in shows%}
-            <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}><td> {{show.sequence}}</td><td> <a href="{% url episode_list client.slug show.slug%}">{{ show.name }}</a></td></tr>
+        <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
+            <td><a href="{% url admin:main_show_change show.id%}">{{show.id}}</a></td>
+            <td><a href="{% url episode_list client.slug show.slug%}">{{ show.name }}</a></td>
+        </tr>
         {% endfor %}
     </table>
 
