tests use host_ids

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -6,15 +6,11 @@
 {% endblock %}
 
 {% block content %}
-<script>
-$(function() { 
-  $( "#accordian").accordian();
-});
-</script>
 
-<a href="{% url client client.slug %}">{{ client.name }}</a>
-<a href="{% url episode_list client.slug show.slug%}">{{ show.name }}</a>
+--client <a href="{% url client client.slug %}">{{ client.slug }}</a>
+--show <a href="{% url episode_list client.slug show.slug%}">{{ show.slug }}</a>
 <br/>
+
 
 {% if prev_episode %}
   <a href="/main/E/{{ prev_episode.id }}">Prev: {{prev_episode.state }} {{prev_episode.name }}</a>
