--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -28,8 +28,11 @@
 <a href="/databrowse/">databrowse</a>
 <a href="/main/">main</a>
 <a href="/main/clients/">Clients</a>
-<a href="http://veyepar.nextdayvideo.com:8080{{request.path}}">prod</a>
-<a href="http://localhost:8080{{request.path}}">dev</a>
+{% if request.META.HTTP_HOST == "localhost:8080" %}
+  <a href="http://veyepar.nextdayvideo.com:8080{{request.path}}">prod</a>
+{% else %}
+  <a href="http://localhost:8080{{request.path}}">dev</a>
+{% endif %}
 
 </p>
 {% block content %}
