--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -30,9 +30,9 @@ $(function() {
 
 <table>
 <tbody>
-<tr><td> Title</td><td><b>{{episode.name}}</b></td></tr>
-<tr><td> Author(s)</td><td>{{episode.authors}} </td></tr>
-<tr><td> Location</td><td>{{episode.location}} </td></tr>
+<tr><td>Name</td><td><b>{{episode.name}}</b></td></tr>
+<tr><td>Author(s)</td><td>{{episode.authors}} </td></tr>
+<tr><td>Location</td><td>{{episode.location}} </td></tr>
 <tr><td>Date</td><td>{{episode.start|date:"b D d"}}</td></tr>
 <tr><td>Start</td><td>{% if same_dates %}{{episode.start|date:"H:i"}}{% else %}{{episode.start}}{% endif %}</td>
 <td>First Raw Start</td><td>{% if same_dates %}{{clrffs.0.0.raw_file.start|date:"H:i"}}{% else %}{{clrffs.0.0.raw_file.start}}{% endif %}</td></tr>
