--- a/dj/main/templates/approve/approve.html
+++ b/dj/main/templates/approve/approve.html
@@ -8,6 +8,9 @@
     <p><b>To approve the release of your video to the public, click 
     <input type="submit" value="Approve" />
     now.</b></p>
+(Warning: If you are seeing this, 
+you have the creditials to modify data, even though you may not be logged in.)
+
 </form> 
 
 {% endblock %}
