make warning visually stand out better

--- a/dj/main/templates/approve/approve.html
+++ b/dj/main/templates/approve/approve.html
@@ -8,8 +8,8 @@
     <p><b>To approve the release of your video to the public, click 
     <input type="submit" value="Approve" />
     now.</b></p>
-(Warning: If you are seeing this, 
-you have the creditials to modify data, even though you may not be logged in.)
+    <p>(Warning: If you are seeing this, 
+    you have the creditials to modify data, even though you may not be logged in.)</p>
 
 </form> 
 
