change wording to include non authinticated reviewers

--- a/dj/main/templates/approve/approve.html
+++ b/dj/main/templates/approve/approve.html
@@ -5,7 +5,7 @@
 {% block point %}
 <form action="" method="POST">
     {% csrf_token %}
-    <p><b>To approve the release of your video to the public, click 
+    <p><b>To approve the release of this video to the public, click 
     <input type="submit" value="Approve" />
     now.</b></p>
     <p>(Warning: If you are seeing this, 
