--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 
-approve_episode 
-{{ episode.edit_key }}
-<a href={% url approve_episode episode.id episode.slug episode.edit_key %}>approve</a><br/>
+{% if episode.edit_key %}
+    <a href={% url approve_episode episode.id episode.slug episode.edit_key %}>approve</a><br/>
+{% endif %}
 
 --client <a href="{% url client client.slug %}">{{ client.slug }}</a>
 --show <a href="{% url episode_list client.slug show.slug%}">{{ show.slug }}</a>
