remove extra links when user not authed

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -23,15 +23,17 @@
 <body>
 {% include "accounts/login_form.html" %}
 
-<p class="shortcuts">
-<a href="/admin/">admin</a>
-<a href="/databrowse/">databrowse</a>
-<a href="/main/">main</a>
-<a href="/main/clients/">Clients</a>
-{% if request.META.HTTP_HOST == "localhost:8080" %}
-  <a href="http://veyepar.nextdayvideo.com:8080{{request.path}}">prod</a>
-{% else %}
-  <a href="http://localhost:8080{{request.path}}">dev</a>
+{% if user.is_authenticated %}
+  <p class="shortcuts">
+  <a href="/admin/">admin</a>
+  <a href="/databrowse/">databrowse</a>
+  <a href="/main/">main</a>
+  <a href="/main/clients/">Clients</a>
+  {% if request.META.HTTP_HOST == "localhost:8080" %}
+    <a href="http://veyepar.nextdayvideo.com:8080{{request.path}}">prod</a>
+  {% else %}
+    <a href="http://localhost:8080{{request.path}}">dev</a>
+  {% endif %}
 {% endif %}
 
 </p>
