--- a/dj/main/templates/episode_list.html
+++ b/dj/main/templates/episode_list.html
@@ -7,6 +7,10 @@
 
 {% block content %}
 
+{% for state in states %}
+<a href="/main/state/{{state.sequence}}/">{{state.slug}}</a>
+{% endfor %}
+
 {% include "episodes_table.html" %}
 
 {% endblock %}
