--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -98,6 +98,7 @@
       <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
         <td><a href="/admin/main/episode/{{episode.id}}/">{{episode.id}}</a></td>
         <td>{{episode.state}}</td>
+        <td>{{episode.duration}}</td>
         <td>{{episode.locked}} - {{episode.locked|timesince}}</td>
         <td>{{episode.locked_by}}</td>
         <td>{{episode.stop|yesno:"y,n,"}}</td>
