add Set Selected to Encode management option

--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -90,6 +90,7 @@
       <tr>
         <th>id</th>
         <th>state</th>
+        <th>duration</th>
         <th>locked</th>
         <th>locked by</th>
         <th>stop</th>
