display raw files that overlap the same space and time

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -9,6 +9,7 @@
 
 <table class="shortcuts">
 <tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
+<tr><td><a href="{% url overlaping_files show.id %}">overlaping_fles</a></td></tr>
 <tr><td><a href="{% url orphan_dv show.id %}">orphan_dv</a></td></tr>
 <tr><td><a href="{% url schedule show.id show.slug %}">schedule</a></td></tr>
 <tr><td><a href="{% url pdfs 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf">recording_sheets.pdf</a></td></tr>
