--- a/dj/main/templates/tests.html
+++ b/dj/main/templates/tests.html
@@ -13,18 +13,21 @@
 <h3>Clients:</h3>
 <ul>
 {% for client in clients %}
-  <li><a href="/admin/main/client/{{client.id}}/">{{client.name}}</a> </li>
+  <li><a href="{% url admin:main_client_change client.id%}">{{client.name}}</a> </li>
   <ul> 
   {% for show in client.show_set.all %}
-    <li><a href="/admin/main/show/{{show.id}}/">{{show.name}}</a> </li>
+    <li><a href="{% url admin:main_show_change show.id %}">{{show.id}}</a>
+    <a href="{% url episode_list client_slug=client.slug show_slug=show.slug %}">{{show.name}}</a> </li>
+
+
     <ul> 
     {% for episode in show.episode_set.all %}
-      <li><a href="/admin/main/episode/{{episode.id}}/">{{episode.name}}</a>
-          - <a href="/admin/main/location/{{episode.location.id}}/">{{episode.location.name}}</a>
+      <li><a href="{% url admin:main_episode_change episode.id%}">{{episode.name}}</a>
+          - <a href="{% url admin:main_location_change episode.location.id%}">{{episode.location.name}}</a>
       <ul> 
       {% for cut_list in episode.cut_list_set.all %}
-        <li><a href="/admin/main/cut_list/{{cut_list.id}}/">{{cut_list.id}}</a>
-            - <a href="/admin/main/raw_file/{{cut_list.raw_file.id}}/">{{cut_list.raw_file.filename}}</a>
+        <li><a href="{% url admin:main_cut_list_change cut_list.id%}">{{cut_list.id}}</a>
+            - <a href="{% url admin:main_raw_file_change cut_list.raw_file.id%}">{{cut_list.raw_file.filename}}</a>
           {{cut_list.apply}}
         </li>
       {% endfor %}
@@ -39,19 +42,19 @@
 <h3>Shows:</h3>
   <ul> 
   {% for show in shows %}
-    <li><a href="/admin/main/show/{{show.id}}/">{{show.name}}</a>
-     - <a href="/admin/main/client/{{show.client.id}}/">{{show.client.name}}</a>
+    <li><a href="{% url admin:main_show_change show.id%}">{{show.name}}</a>
+     - <a href="{% url admin:main_client_change show.client.id%}">{{show.client.name}}</a>
     </li>
   {% endfor %}
   </ul>
 <h3>Locations:</h3>
 <ul> 
 {% for location in locations %}
-  <li> <a href="/admin/main/location/{{location.id}}/">{{location.name}}</a>
+  <li> <a href="{% url admin:main_location_change location.id%}">{{location.name}}</a>
     <ul> 
   {% for raw_file in location.raw_file_set.all %}
-    <li><a href="/admin/main/raw_file/{{raw_file.id}}/">{{raw_file.filename}}</a>
-    - <a href="/admin/main/show/{{raw_file.show.id}}/">{{raw_file.show.name}}</a>
+    <li><a href="{% url admin:main_raw_file_change raw_file.id%}">{{raw_file.filename}}</a>
+    - <a href="{% url admin:main_show_change raw_file.show.id%}">{{raw_file.show.name}}</a>
     </li>
   {% endfor %}
     </ul>
