tie recording sheet images to episodes

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -50,7 +50,8 @@
         <th>state</th>
         <th>episode.name</th>
         <th>episode.authors</th>
-        <th>released</th>
+        <th>rel</th>
+        <th>img</th>
         <th>host<br>index</th>
       </tr>
     </thead>
@@ -74,7 +75,8 @@
         <td>{{episode.state}}</td>
         <td style="white-space:normal"><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
         <td style="white-space:normal">{{episode.authors}}</td>
-        <td>{{episode.released}}</td>
+        <td>{{episode.released|yesno:"Y,N"}}</td>
+        <td>{{episode.image_file_set.count}}</td>
         <td>
             {%if episode.host_url %}<a href="{{episode.host_url}}">Y</a>{% endif %}
             {%if episode.public_url %}<a href="{{episode.public_url}}">R</a>{% endif %}
