remind people to set state to Encode.

--- a/dj/main/templates/approve/edit.html
+++ b/dj/main/templates/approve/edit.html
@@ -26,6 +26,11 @@ If a file contains cruft, like 5 minutes of people coming into the room and find
 You can trim from the start and end by entering the time in the Start and End boxes.  The time you enter is the time you see  on the player.  Hit Play, when you are at the point you want the talk to start, hit Pause. look at the time ont the player, enter that in the Start box.   Run the slider to the end and Play.  If you talk ends long before the end of the file, hit Pause at the end of your talk, enter the time you see on the player in the End box.
 </p>
 
+<p>
+SET THE STATE TO ENCODE, HIT SAVE.</b>
+There is a process polling the db, when it sees that, it will start encoding.  
+</p>
+
 <p>Ignore the login.  That is for video team members to do additional work.</p>
 
 <p>BTW, allowing the presenter to work on their talk is a new feature.
